RESOLVED FIXED194142
[Win] WebKitTestRunners is failing to create the IndexedDB directory.
https://bugs.webkit.org/show_bug.cgi?id=194142
Summary [Win] WebKitTestRunners is failing to create the IndexedDB directory.
Fujii Hironori
Reported 2019-01-31 22:33:24 PST
[Win] WebKitTestRunners is failing to create the IndexedDB directory. For example, storage/indexeddb/aborted-versionchange-closes.html is failing with the following error message > ERROR: Failed to make all directories for path 'c:\users\fujii\appdata\local\temp\WebKitTestRunners-62gqon/Databases/IndexedDB' > ..\..\Source\WebKit\NetworkProcess/NetworkProcess.cpp(1990) : ensurePathExists
Attachments
Patch (5.73 KB, patch)
2019-01-31 22:40 PST, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2019-01-31 22:39:38 PST
Mixing / and \ is the cause.
Fujii Hironori
Comment 2 2019-01-31 22:40:34 PST
Fujii Hironori
Comment 3 2019-02-03 18:12:01 PST
Comment on attachment 360835 [details] Patch Clearing flags on attachment: 360835 Committed r240913: <https://trac.webkit.org/changeset/240913>
Fujii Hironori
Comment 4 2019-02-03 18:12:04 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-02-03 18:13:28 PST
Note You need to log in before you can comment on or make changes to this bug.