[Win] WebKitTestRunners is failing to create the IndexedDB directory. https://bugs.webkit.org/show_bug.cgi?id=194142

Reviewed by Ross Kirsling.

There three 'separator' variables in TestController.cpp. Renamed
it 'pathSeparator', and unified them.

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::generateContextConfiguration const):
(WTR::createTestURL):
(WTR::TestController::platformAdjustContext):

Canonical link: https://commits.webkit.org/208675@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240913 268f45cc-cd09-0410-ab3c-d52691b4dbfc